# noisiq

./: .gitignore  Circuit Simulator.ipynb  README.md  pyproject.toml
src/noisiq/: -readme-
src/noisiq/ir/: __init__.py  circuit.py
src/noisiq/results/: __init__.py  type.py
